# rtl-agent

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
examples/: axi-router-ambiguity-agent.yaml  axi-router-repo-agent.yaml  axi-router-sim-agent.yaml  axi-router-sim-hier-agent.yaml  axi-router-sim-triage-agent.yaml  axi-stream-router-agent.yaml  rtl-agent.yaml  simple-rtl-agent.yaml
project/: current 2.md  current.md  handoff.md  history.md  roadmap.md
scripts/: _example_check.py  agent_portability_check.py  axi_router_ambiguity_pilot_check.py  axi_router_repository_pilot_check.py  axi_router_seeded_failure_check.py  axi_router_simulated_failure_check.py  axi_router_simulated_multimodule_check.py  axi_router_simulated_triage_check.py  check.py  counterexample_pilot_check.py  counterfactual_pilot_check.py  e2e_example_check.py  evidence_artifact_provenance_check.py  experiment_matrix_pilot_check.py  external_axi_router_repo_check.py  failure_clustering_check.py  failure_corpus_check.py  failure_example_check.py  failure_family_cluster_check.py  failure_intelligence_example_check.py  fingerprint_stability_check.py  hkg_failure_corpus_check.py  intervention_templates_pilot_check.py  mvp_demo_check.py  no_change_example_check.py  packaging_smoke.py  persistent_hkg_lifecycle_check.py  prohibited_shortcut_review_check.py  tool_failure_example_check.py  vendor_verilog_axis.py
tests/: test_assertion_link.py  test_assertion_link_cli.py  test_benchmark.py  test_benchmark_cli.py  test_cli.py  test_command_runner.py  test_config.py  test_counterfactual.py  (+56 more)
(+205 files in other folders)
