[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtl-agent"
version = "0.1.0"
description = "Deterministic orchestration foundation for RTL engineering agents."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
rtl-agent = "rtl_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rtl_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts/check.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
